# IBM-Data-Science-Professional-Certificate

Applied Data Science Capstone/Assesments/assesment-1/: jupyter-labs-spacex-data-collection-api-v2.ipynb  jupyter-labs-webscraping.ipynb  table.html
Applied Data Science Capstone/Assesments/assesment-2/: labs-jupyter-spacex-Data wrangling-v2.ipynb
Applied Data Science Capstone/Assesments/assesment-4/: jupyter-labs-eda-dataviz-v2.ipynb
Applied Data Science Capstone/Assesments/assesment-5/: lab-jupyter-launch-site-location-v2.ipynb
Applied Data Science Capstone/project/NYC Bike Share Analytics Dashboard/: .dockerignore  Dockerfile  app.py  bike_trips_data.parquet  callbacks.py  data.py  data2.py  docker-compose.yml  figures.py  layout.py  pyproject.toml  requirements.txt
Applied Data Science Capstone/project/NYC Bike Share Analytics Dashboard/assets/: style.css
Applied Data Science Capstone/project/NYC Bike Share Analytics Dashboard/models/: lgbm_model.txt  trip_duration_model.pkl  xgb_model.ubj
Applied Data Science Capstone/project/NYC Bike Share Analytics Dashboard/notebook/: Report.ipynb  Report.md
Assignment-2/: Final Assignment Webscraping-v2.ipynb  Final-Assignment Library-v2.ipynb  Readme.md
Assignment_1/notebook/: DataScienceEcosystem.ipynb
Data Analysis for Python/: House_Sales_in_King_Count_USA.ipynb
Data Visualization with Python/: .gitignore  DV0101EN-Final-Assignment-Part1-v2.ipynb  main.py  pyproject.toml
Databases and SQL for Data Science with Python/: FinalDB.db  mod5_final_project.ipynb
