[project]
name = "nyc-bike-share-analytics-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.3",
    "datashader>=0.18.1",
    "fastparquet>=2024.11.0",
    "holoviews>=1.20.2",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pyarrow>=20.0.0",
]
